--- a/plists/10A432.plist
+++ b/plists/10A432.plist
@@ -9,7 +9,7 @@
 		INSTALLED_PRODUCT_ASIDES = YES;
 		MACOSX_DEPLOYMENT_TARGET = 10.6;
 		NEXT_ROOT = "";
-		RC_ARCHS = "i386 x86_64";
+		RC_ARCHS = "ppc i386 x86_64";
 		RC_JASPER = YES;
 		RC_NONARCH_CFLAGS = "-pipe";
 		RC_OS = macos;
@@ -284,7 +284,7 @@
 				);
 			};
 			environment = {
-				RC_ARCHS = i386;
+				RC_ARCHS = "ppc i386";
 			};
 			version = 153;
 		};
@@ -2026,7 +2026,7 @@
 				);
 			};
 			environment = {
-				RC_ARCHS = i386;
+				RC_ARCHS = "ppc i386";
 			};
 			version = 199.4.1;
 		};
@@ -6081,7 +6081,7 @@
 				);
 			};
 			environment = {
-				RC_ARCHS = i386;
+				RC_ARCHS = "ppc i386";
 			};
 			version = 72;
 		};
@@ -12614,7 +12614,7 @@
 				);
 			};
 			environment = {
-				RC_ARCHS = i386;
+				RC_ARCHS = "ppc i386";
 			};
 			version = 18;
 		};
@@ -14482,7 +14482,7 @@
 				);
 			};
 			environment = {
-				RC_ARCHS = i386;
+				RC_ARCHS = "ppc i386";
 			};
 			version = 13;
 		};
