--- a/plists/10H574.plist
+++ b/plists/10H574.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>binary_sites</key>
 	<array>
-		<string>http://src.macosforge.org/Roots/10H574/</string>
+		<string>http://macos-powerpc.org/darwinbuild/Roots/10H574</string>
 	</array>
 	<key>build</key>
 	<string>10H574</string>
