--- a/plists/10J567.plist
+++ b/plists/10J567.plist
@@ -4,7 +4,7 @@
 <dict>
         <key>binary_sites</key>
         <array>
-                <string>http://src.macosforge.org/Roots/10J567/</string>
+                <string>http://macos-powerpc.org/darwinbuild/Roots/10J567</string>
         </array>
 	<key>build</key>
 	<string>10J567</string>
