--- a/plists/10J869.plist
+++ b/plists/10J869.plist
@@ -4,7 +4,7 @@
 <dict>
         <key>binary_sites</key>
         <array>
-                <string>http://src.macosforge.org/Roots/10J869/</string>
+                <string>http://macos-powerpc.org/darwinbuild/Roots/10J869</string>
         </array>
 	<key>build</key>
 	<string>10J869</string>
